--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -1,3 +1,11 @@
 
 .normal {
+    width: 900px;
+    margin: 3em auto 0;
+}
+.create{
+    margin-bottom: 1.5em;
+}
+.operation a{
+    margin:0 .5em;
 }
